WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
61141
Crash when detaching Web Inspector when parent is in process of closing
https://bugs.webkit.org/show_bug.cgi?id=61141
Summary
Crash when detaching Web Inspector when parent is in process of closing
Brian Weinstein
Reported
2011-05-19 14:00:20 PDT
There is a crash when detaching the docked Web Inspector when the parent is in the process of closing. We are trying to send a WM_SIZE message when the window is closing. We should post the message instead. <
rdar://problem/9470027
>
Attachments
[PATCH] Fix
(2.06 KB, patch)
2011-05-19 14:01 PDT
,
Brian Weinstein
aroben
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brian Weinstein
Comment 1
2011-05-19 14:01:06 PDT
Created
attachment 94110
[details]
[PATCH] Fix
Brian Weinstein
Comment 2
2011-05-19 15:06:36 PDT
Landed in
r86893
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug