Crash when detaching Web Inspector when parent is in process of closing. https://bugs.webkit.org/show_bug.cgi?id=61141 <rdar://problem/9470027>

Reviewed by Adam Roben.

We were trying to send a WM_SIZE to a window that was in the process of closing. Switch
to using PostMessage, so the window will finish closing, and then it won't need to
process the WM_SIZE message anymore.

* UIProcess/win/WebInspectorProxyWin.cpp:
(WebKit::WebInspectorProxy::platformAttach): Call PostMessage instead of SendMessage.
(WebKit::WebInspectorProxy::platformDetach): Ditto.



Canonical link: https://commits.webkit.org/76512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86893 268f45cc-cd09-0410-ab3c-d52691b4dbfc